--- a/index.html
+++ b/index.html
@@ -1,43 +1,28 @@
 
 <!DOCTYPE html>
-<html lang="pt-BR" class="scroll-smooth">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MangaNarrator - Teatro Mental de Elite</title>
+    <title>MangaNarrator - Acessibilidade Radical</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #000000;
-            color: #f8fafc;
-            overflow-x: hidden;
+            background-color: #0f172a; /* slate-900 */
+            color: #f8fafc; /* slate-50 */
         }
-        /* Custom Scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #000000;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #1e293b;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #22d3ee;
-        }
-        /* Focus ring for accessibility - Ultra Visibility */
-        :focus-visible {
-            outline: 4px solid #22d3ee !important;
+        /* Focus ring for accessibility */
+        :focus {
+            outline: 4px solid #38bdf8 !important; /* sky-400 */
             outline-offset: 4px;
-            box-shadow: 0 0 20px rgba(34, 211, 238, 0.5);
         }
-        /* Selection Color */
-        ::selection {
-            background: #22d3ee;
-            color: #000;
+        /* High Contrast Support */
+        @media (forced-colors: active) {
+            :focus {
+                outline: 2px solid CanvasText !important;
+            }
         }
     </style>
 <script type="importmap">
