--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="h-full overflow-hidden">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MangaNarrator - Acessibilidade Radical</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #0f172a; /* slate-900 */
-            color: #f8fafc; /* slate-50 */
+            background-color: #020617;
+            color: #f8fafc;
+            height: 100%;
+            overflow: hidden;
+            /* Padrão de Retícula Manga (Halftone) */
+            background-image: radial-gradient(#1e293b 1px, transparent 0);
+            background-size: 20px 20px;
         }
-        /* Focus ring for accessibility */
         :focus {
-            outline: 4px solid #38bdf8 !important; /* sky-400 */
-            outline-offset: 4px;
+            outline: 4px solid #38bdf8 !important;
+            outline-offset: 2px;
         }
-        /* High Contrast Support */
-        @media (forced-colors: active) {
-            :focus {
-                outline: 2px solid CanvasText !important;
-            }
+        /* Scrollbars Customizadas para Sidebar e Texto */
+        ::-webkit-scrollbar {
+            width: 6px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #0f172a;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #334155;
+            border-radius: 0px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #38bdf8;
         }
     </style>
 <script type="importmap">
@@ -37,7 +48,7 @@
 }
 </script>
 </head>
-<body>
-    <div id="root"></div>
+<body class="h-full">
+    <div id="root" class="h-full"></div>
 </body>
 </html>
