feat: Load main app script and improve API key handling
Introduces the main application script (`index.tsx`) to the `index.html`. Also, refactors `geminiService.ts` to fetch the API key more safely using environment variables, preventing potential errors during script loading.

--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
 </head>
 <body class="h-full">
     <div id="root" class="h-full"></div>
+    <!-- Script principal para carregar o app -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
